# smif

./: .appveyor.yml  .checkignore  .coveragerc  .environment.yml  .eslintrc.json  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  AUTHORS.md  AUTHORS.rst  CHANGELOG.md  CHANGELOG.rst  CHANGES.rst  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING.rst  LICENSE.txt  MANIFEST.in  README.md  README.rst  environment.yml  mypy.ini  pyproject.toml  requirements-docs.txt  requirements.txt  setup.cfg  setup.py  test-requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  release-smif.md
.github/workflows/: docs.yml  package.yml  test.yml
ci/: coverage.sh  install.sh
docs/: Makefile  authors.rst  changelog.rst  concept.rst  concepts.md  concepts.rst  conf.py  contributing.rst  decisions.md  decisions.rst  developers.md  developers.rst  getting_started.md  getting_started.rst  index.rst  installation.md  installation.rst  project_configuration.rst  simulation_models.md  simulation_models.rst
docs/_static/: image_fix.css  theme_tweaks.css
docs/_templates/: README.txt  module.rst  package.rst
docs/api/: modules.rst  smif.rst
docs/gui/: screenshot.sh
docs/images/: make_images.sh
docs/uml/: config_flow.uml  convert_uml.sh  data_flow.uml  data_handle.uml  decision-simulation.uml  decisions_flow.uml  error_boundaries.uml  intervention.uml  make_images.sh  resolution_sequence.uml  run_decisions.uml  run_model.uml  run_model_alternative.uml  run_pyreverse.sh  run_sos_model.uml  sequence.uml  smif.uml  smif_composite.uml
features/: cli.feature  cyclic_dependency.feature  develop.feature  direct_dependency.feature
features/steps/: cyclic_dependency.py  direct_dependency.py
smif/: __init__.py  abstract.py  asset.py  cli.py  composite.py  controller.py  decision.py  inputs.py  intervention.py  metadata.py  modelrun.py  optimisation.py  outputs.py  parameters.py  parse_config.py  runner.py  scenario_model.py  sector_model.py  sectormodel.py  sos_model.py  state.py  system.py  utils.py  water_supply.py
smif/app/: .babelrc  README.md  package.json  webpack.config.js
smif/app/src/: index.ejs  index.html  index.js  pattern-library.css  pattern-library.js
smif/app/test/: helpers.js  test_app.js
smif/cli/: __init__.py  parse_config.py  parse_data.py  parse_model_config.py  parse_sector_model_config.py  parse_sectormodel_config.py
smif/convert/: __init__.py  area.py  interval.py  register.py  unit.py
smif/data_layer/: __init__.py  data_handle.py  data_interface.py  database_interface.py  datafile_interface.py  load.py  memory_interface.py  model_data.py  sector_model_config.py  sos_model_config.py  validate.py
smif/examples/: water_supply.py  water_supply_exec.py
smif/http_api/: __init__.py  app.py
smif/model/: __init__.py  composite.py  dependency.py  model_set.py  scenario_model.py  sector_model.py  sos_model.py
smif/parameters/: __init__.py  narrative.py  parameters.py
smif/sample_project/config/: project.yml
smif/sample_project/models/: energy_demand.py  water_supply.py
smif/schema/: assets_schema.json  modelrun_config_schema.json  pre_specified_schema.json  timesteps_config_schema.json
src/smif/: __init__.py  decision.py  exception.py  intervention.py  metadata.py  modelrun.py
src/smif/app/: .babelrc  .eslintrc.json  README.md  package-lock.json  package.json  webpack.config.js
src/smif/cli/: __init__.py  log.py
src/smif/controller/: __init__.py  build.py  execute.py  execute_run.py  execute_step.py  jobscheduler.py  load.py  modelrun.py  scheduler.py  setup.py
src/smif/convert/: __init__.py  adaptor.py  area.py  interval.py  region.py  register.py  unit.py
src/smif/data_layer/: __init__.py  abstract_config_store.py  abstract_data_store.py  abstract_metadata_store.py  data_array.py  data_handle.py  data_interface.py  database_interface.py  datafile_interface.py  load.py  memory_interface.py  model_loader.py  results.py  store.py  validate.py
src/smif/database/: setup_database.py
src/smif/decision/: decision.py  intervention.py
src/smif/http_api/: app.py  (+3 more)
tests/: conftest.py  test_asset.py  test_cli.py  test_composite.py  test_config_parser.py  test_controller.py  test_convert_interval.py  test_data_containers.py  test_decision.py  test_inputs.py  test_intervention.py  test_metadata.py  test_model_inputs.py  test_model_outputs.py  test_model_wrapper.py  test_modelrun.py  test_optimisation.py  test_optimise.py  test_outputs.py  test_parameters.py  test_runner.py  test_sector_model.py  test_sos_model.py  test_spacetimevalue.py  test_state.py  test_utils.py  test_water_supply.py  travis_install.sh
tests/cli/: test_cli.py  test_config_parser.py  test_parse_config.py  test_parse_model_config.py  test_parse_sector_model_config.py
tests/controller/: test_build.py  test_modelrun.py  test_scheduler.py
tests/convert/: conftest.py  test_adaptor.py  test_area.py  test_convert.py  test_generate_coefficients.py  test_interval.py  test_region.py  test_unit.py
tests/data_layer/: conftest.py  test_config_store.py  test_config_store_toml.py  test_config_store_yaml.py  test_data_array.py  test_data_handle.py  test_data_interface.py  test_data_store.py  test_data_store_csv.py  test_datafile_interface.py  test_interface_implementations.py  test_load.py  test_memory_interface.py  test_metadata_store.py  test_metadata_store_file.py  test_model_data.py  test_model_loader.py  test_results.py  test_sector_model_config.py  test_sos_model_config.py  test_store.py  test_validate.py
tests/decision/: test_decision.py  test_intervention.py  test_optimisation.py
tests/fixtures/: water_supply.py  water_supply_exec.py
tests/http_api/: test_app.py  test_crud.py
tests/metadata/: test_coordinates.py  test_dimension.py  test_input.py  test_spec.py  test_timestep.py
tests/metadatum/: test_coordinates.py  test_spec.py
tests/model/: test_composite.py  test_dependency.py  test_model_set.py  test_scenario_model.py  test_sector_model.py  test_sos_model.py
tests/parameters/: test_narratives.py  test_parameters.py
(+378 files in other folders)
