# This file is used to configure your project.
# Read more about the various options under:
# http://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files
[metadata]
name = smif
description = Simulation Modelling Integration Framework
author = Will Usher, Tom Russell, Roald Schoenmakers, Craig Robson, Fergus Cooper, Thibault Lestang, Rose Dickinson
author_email = william.usher@ouce.ox.ac.uk
license = MIT
url = http://www.itrc.org.uk
long_description = file: README.rst
# Change if running only on Windows, Mac or Linux (comma-separated)
platforms = any
# Add here all kinds of additional classifiers as defined under
# https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3
    Programming Language :: JavaScript
    Intended Audience :: Science/Research
    Natural Language :: English
    Topic :: Scientific/Engineering


[options]
zip_safe = True
packages = find:
include_package_data = True
package_dir =
    =src
# Add here dependencies of your project (semicolon-separated), e.g.
# install_requires = numpy; scipy
# These should match requirements.txt, without the pinned version numbers
install_requires = flask; isodate; minio; networkx; numpy; Pint; pyarrow; python-dateutil; requests; ruamel.yaml>=0.15.50
# Add here test requirements (semicolon-separated)
tests_require = pytest; pytest-cov

[options.packages.find]
where = src
exclude =
    tests

[options.package_data]
# Add package data requirements here, like:
# hello = *.msg
sample_project = smif/sample_project/*
app/dist = smif/app/dist/*

[options.extras_require]
# Add here additional requirements for extra features, to install with:
# `pip install smif[PDF]` like:
# PDF = ReportLab; RXP
win32 = pywin32
spatial = fiona; shapely; Rtree
data = pandas; xarray
database = psycopg2

norecursedirs =
    dist
    build

[aliases]
docs = build_sphinx

[bdist_wheel]
# Use this option if your package is pure-python
universal = 1

[build_sphinx]
source_dir = docs
build_dir = docs/_build

[devpi:upload]
# Options for the devpi: PyPI server and packaging tool
# VCS export must be deactivated since we are using setuptools-scm
no-vcs = 1
formats = bdist_wheel

[flake8]
# ignore = D203*/
exclude =
    build
    dist
    .eggs
    docs/conf.py
    docs/_build
    .git
    __pycache__
    node_modules
max-complexity = 10
max-line-length = 95
per-file-ignores =
    src/smif/data_layer/validate.py:C901
    src/smif/data_layer/database_interface.py:C901

[pyscaffold]
# PyScaffold's parameters when the project was created.
# This will be used when updating. Do not change!
version = 3.0
package = smif
